HtmlUi, Bugfix: Position top: 0 px must be specified otherwise popup might be positioned after scout div (during rendering) and create empty, white space (and scroll whole body). Usually popup should overwrite its own top setting (popup usually should not be rendered after scout div and also not at top: 0 px).

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.css
@@ -1,5 +1,6 @@
 .popup {
   position: absolute;
+  top: 0px;
 
   &.down > .popup-head {
     padding-top: 3px;
